# backend/app/routers/research.py
@@ -324,7 +324,6 @@ def get_study_data(
         end_at=end_at,
         learning_style=filters.learning_style,
         norm_group=filters.norm_group,
-        user_email=filters.user_email,
         page=filters.page,
         size=filters.size,
     )
